# MultimodalSpeechEmotionRecognition

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: README.md
data/raw/: README.md
data/raw/ESD/: README.md
data/raw/IEMOCAP/: README.md
demo/: README.md  gradio_app.py  streamlit_app.py
docs/: README.md  artifacts.md
models/: README.md
notebooks/: 02_zero_shot_esd.ipynb  02_zero_shot_iemocap.ipynb  03_peft_finetuning.ipynb  README.md  dataset_exploration.ipynb
results/: README.md
scripts/: README.md
scripts/evaluation/: 04_eval_all_adapters_esd.py  04_eval_all_adapters_iemocap.py  04_zero_shot_dora_with_transcript_esd.py  04_zero_shot_dora_with_transcript_iemocap.py  README.md  evaluate_iemocap_adapters.py  evaluate_zero_shot_esd.py  evaluate_zero_shot_iemocap.py
scripts/training/: 03_train_dora_voxtral_with_transcript.py  03_train_lora_voxtral_esd.py  04_training_voxtral_adapters.py  README.md  train_voxtral_lora_esd.py
slides/: README.md
src/: README.md
src/mer/: __init__.py  cli.py
src/mer/config/: __init__.py  runtime.py
src/mer/data/: __init__.py  esd.py  iemocap.py  labels.py
src/mer/evaluation/: __init__.py  metrics.py
src/mer/inference/: __init__.py  demo.py  (+2 more)
tests/: test_adapters.py  test_demo_inference.py  test_esd_data.py  test_iemocap_data.py  test_inference_voxtral.py  test_labels.py  test_metrics.py  test_prompts.py  test_runtime_config.py  test_training_collators.py  test_training_esd.py  test_training_transforms.py  test_training_utils.py  test_visualization.py
(+12 files in other folders)
